# cie-middleware-linux

./: .gitignore  .gitignore.REMOVED.git-id.REMOVED.git-id  .travis.yml.REMOVED.git-id.REMOVED.git-id  LICENSE.REMOVED.git-id.REMOVED.git-id  README.en.md  README.md  README.md.REMOVED.git-id  README.md.REMOVED.git-id.REMOVED.git-id
libcie-pkcs11/: CMakeLists.txt  keys.h.REMOVED.git-id.REMOVED.git-id  meson.build
libcie-pkcs11/CSP/: AbilitaCIE.cpp  AbilitaCIE.cpp.REMOVED.git-id  AbilitaCIE.cpp.REMOVED.git-id.REMOVED.git-id  AbilitaCIE.h.REMOVED.git-id.REMOVED.git-id  ExtAuthKey.cpp  ExtAuthKey.cpp.REMOVED.git-id.REMOVED.git-id  FirmaConCIE.cpp  FirmaConCIE.h  IAS.cpp  IAS.cpp.REMOVED.git-id.REMOVED.git-id  IAS.h  IAS.h.REMOVED.git-id.REMOVED.git-id  PINManager.cpp  PINManager.cpp.REMOVED.git-id.REMOVED.git-id  PINManager.h.REMOVED.git-id.REMOVED.git-id  VerificaConCIE.cpp  subdir.mk  subdir.mk.REMOVED.git-id  subdir.mk.REMOVED.git-id.REMOVED.git-id
libcie-pkcs11/Crypto/: AES.cpp  AES.h  ASNParser.cpp  ASNParser.h  Base64.cpp  Base64.cpp.REMOVED.git-id  Base64.h  DES3.cpp  DES3.h  MAC.cpp  RSA.cpp  RSA.cpp.REMOVED.git-id  SHA1.cpp  SHA1.cpp.REMOVED.git-id  SHA1.h  SHA256.cpp  SHA256.cpp.REMOVED.git-id  subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/Debug/: Makefile  Makefile.REMOVED.git-id
libcie-pkcs11/Debug/CSP/: subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/Debug/Crypto/: subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/Debug/PCSC/: subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/Debug/PKCS11/: subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/Debug/Util/: subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/LOGGER/: Logger.cpp
libcie-pkcs11/PCSC/: APDU.h  CardLocker.cpp  PCSC.cpp  Token.cpp  Token.cpp.REMOVED.git-id  subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/PKCS11/: CIEP11Template.cpp  CardContext.cpp  CardTemplate.cpp  CardTemplate.cpp.REMOVED.git-id  CardTemplate.h  Mechanism.cpp  Mechanism.h  P11Object.cpp  P11Object.h  PKCS11Functions.cpp  PKCS11Functions.cpp.REMOVED.git-id  PKCS11Functions.h  Slot.cpp  Slot.cpp.REMOVED.git-id  Slot.h  Slot.h.REMOVED.git-id  initP11.cpp  session.cpp  session.h  subdir.mk  subdir.mk.REMOVED.git-id
libcie-pkcs11/Release/: Makefile.REMOVED.git-id.REMOVED.git-id  objects.mk.REMOVED.git-id.REMOVED.git-id  sources.mk.REMOVED.git-id.REMOVED.git-id
libcie-pkcs11/Release/Crypto/: subdir.mk.REMOVED.git-id.REMOVED.git-id
libcie-pkcs11/Release/Util/: subdir.mk.REMOVED.git-id.REMOVED.git-id
libcie-pkcs11/Sign/: CIESign.cpp  CIEVerify.cpp
libcie-pkcs11/Util/: Array.cpp.REMOVED.git-id.REMOVED.git-id  Array.h  Array.h.REMOVED.git-id.REMOVED.git-id  CacheLib.cpp  CacheLib.cpp.REMOVED.git-id.REMOVED.git-id  CacheLib.h.REMOVED.git-id.REMOVED.git-id  CryptoppUtils.cpp.REMOVED.git-id.REMOVED.git-id  CryptoppUtils.h  CryptoppUtils.h.REMOVED.git-id.REMOVED.git-id  IniSettings.cpp  IniSettings.cpp.REMOVED.git-id.REMOVED.git-id  IniSettings.h  IniSettings.h.REMOVED.git-id.REMOVED.git-id  ModuleInfo.cpp  ModuleInfo.cpp.REMOVED.git-id.REMOVED.git-id  ModuleInfo.h  ModuleInfo.h.REMOVED.git-id.REMOVED.git-id  SyncroEvent.cpp  SyncroEvent.cpp.REMOVED.git-id.REMOVED.git-id  SyncroEvent.h.REMOVED.git-id.REMOVED.git-id  SyncroMutex.cpp.REMOVED.git-id.REMOVED.git-id  SyncroMutex.h.REMOVED.git-id.REMOVED.git-id  TLV.cpp  TLV.cpp.REMOVED.git-id.REMOVED.git-id  TLV.h.REMOVED.git-id.REMOVED.git-id  UUCByteArray.cpp  UUCByteArray.cpp.REMOVED.git-id.REMOVED.git-id  UUCByteArray.h.REMOVED.git-id.REMOVED.git-id  UUCHashtable.hpp.REMOVED.git-id.REMOVED.git-id  UUCProperties.cpp.REMOVED.git-id.REMOVED.git-id  UUCProperties.h.REMOVED.git-id.REMOVED.git-id  UUCStringTable.cpp.REMOVED.git-id.REMOVED.git-id  UUCStringTable.h.REMOVED.git-id.REMOVED.git-id  UUCTextFileReader.cpp  UUCTextFileReader.cpp.REMOVED.git-id.REMOVED.git-id  UUCTextFileReader.h  UUCTextFileReader.h.REMOVED.git-id.REMOVED.git-id  UtilException.cpp  UtilException.cpp.REMOVED.git-id.REMOVED.git-id  UtilException.h  (+16 more)
libcie-pkcs11/include/CSP/: AbilitaCIE.h  IAS.h  PINManager.h
libcie-pkcs11/include/Crypto/: AES.h  ASNParser.h  Base64.h  CryptoUtil.h  DES3.h  MAC.h  MD5.h  RSA.h  SHA1.h  sha256.h  sha512.h
libcie-pkcs11/include/PCSC/: CardLocker.h  PCSC.h  Token.h
libcie-pkcs11/include/PKCS11/: CIEP11Template.h  CardTemplate.h  Mechanism.h  P11Object.h  PKCS11Functions.h  Slot.h  cryptoki.h  pkcs11.h  session.h
libcie-pkcs11/include/UI/: AbilitaCIE.mm
libcie-pkcs11/include/Util/: Array.h  CryptoppUtils.h  IniSettings.h  ModuleInfo.h  SyncroMutex.h  TLV.h  UUCByteArray.h  UUCHashtable.hpp  UUCProperties.h  UUCTextFileReader.h  UtilException.h  defines.h  funccallinfo.h  log.h  util.h
libcie-pkcs11/source/CSP/: AbilitaCIE.cpp  ExtAuthKey.cpp  IAS.cpp  PINManager.cpp
libcie-pkcs11/source/Crypto/: AES.cpp  ASNParser.cpp  Base64.cpp  DES3.cpp  MAC.cpp  MD5.cpp  RSA.cpp  SHA1.cpp  SHA256.cpp  SHA512.cpp
libcie-sign-sdk/: meson.build
libcie-sign-sdk/include/: BaseSigner.h  BigInteger.h  BigIntegerAlgorithms.h  BigIntegerUtils.h  BigUnsigned.h  BigUnsignedInABase.h  CIEEngineHelper.h  CIESigner.h  CardMod.h  CertStore.h  CounterSignatureGenerator.h  M7MParser.h  NumberlikeArray.h  PdfSignatureGenerator.h  PdfVerifier.h  SignatureGenerator.h  SignedDataGeneratorEx.h  SignedDocument.h  SignerInfoGenerator.h  TSAClient.h  UUCHashtable.h  UUCLogger.h  UUCProperties.h  UUCStringTable.h  UUCTextFileReader.h  UUCTextFileWriter.h  XAdESGenerator.h  XAdESVerifier.h  base64-std.h  disigonsdk.h
libcie-sign-sdk/src/: Base64.cpp  BigIntegerAlgorithms.cpp  BigUnsignedInABase.cpp  CIESigner.cpp  CertStore.cpp  CounterSignatureGenerator.cpp  PCSC.cpp  PdfSignatureGenerator.cpp  PdfVerifier.cpp  SignatureGenerator.cpp  SignedDataGeneratorEx.cpp  SignedDocument.cpp  TSAClient.cpp  Token.cpp  UUCLogger.cpp  UUCProperties.cpp  UUCStringTable.cpp  UUCTextFileReader.cpp  UUCTextFileWriter.cpp  XAdESGenerator.cpp  XAdESVerifier.cpp  definitions.cpp  disigonsdk.cpp
libs/: .clang-format  meson.build
libs/re/: SetGraphometricData.cpp
libs/subprojects/: libpodofo.wrap  opencie-pkcs11
(+814 files in other folders)
