project('cie-sign-sdk', 'cpp',
  version : '1.4.1',
  license : 'MIT')

add_project_arguments('-fPIC', language : 'cpp')

crypto_dep = dependency('libcrypto')
cryptop_dep = dependency('libcrypto++', required : false)
cryptopp_dep = dependency('libcryptopp', required : false)
pcsclite_dep = dependency('libpcsclite')
thread_dep = dependency('threads')

inc = include_directories('/usr/include/PCSC',
                          '/usr/include/libxml2',
                          '/usr/include',
                          'src',
                          'include',
                          'src/RSA',
                          'src/ASN1',
                          'src/Crypto',
                          'src/CSP',
                          'src/PCSC',
                          'src/Util')

cie_sign_sdk_sources = ['src/Base64.cpp',
                        'src/BigInteger.cpp',
                        'src/BigIntegerAlgorithms.cpp',
                        'src/BigIntegerUtils.cpp',
                        'src/BigUnsigned.cpp',
                        'src/BigUnsignedInABase.cpp',
                        'src/CIESigner.cpp',
                        # 'src/CIEEngine.c',
                        # 'src/CIEEngineHelper.c',
                        'src/CertStore.cpp',
                        'src/CounterSignatureGenerator.cpp',
                        'src/SignatureGenerator.cpp',
                        'src/LdapCrl.cpp',
                        'src/M7MParser.cpp',
                        # 'src/PdfSignatureGenerator.cpp',
                        'src/PdfVerifier.cpp',
                        'src/SignedDataGeneratorEx.cpp',
                        'src/SignedDocument.cpp',
                        'src/SignerInfoGenerator.cpp',
                        'src/TSAClient.cpp',
                        'src/UUCLogger.cpp',
                        'src/UUCProperties.cpp',
                        'src/UUCStringTable.cpp',
                        'src/UUCTextFileReader.cpp',
                        'src/UUCTextFileWriter.cpp',
                        'src/XAdESGenerator.cpp',
                        'src/XAdESVerifier.cpp',
                        'src/definitions.cpp',
                        'src/disigonsdk.cpp',
                        'src/ASN1/ASN1BitString.cpp',
                        'src/ASN1/ASN1Boolean.cpp',
                        'src/ASN1/ASN1GenericSequence.cpp',
                        'src/ASN1/ASN1Integer.cpp',
                        'src/ASN1/ASN1Null.cpp',
                        'src/ASN1/ASN1Object.cpp',
                        'src/ASN1/ASN1ObjectIdentifier.cpp',
                        'src/ASN1/ASN1Octetstring.cpp',
                        'src/ASN1/ASN1OptionalField.cpp',
                        'src/ASN1/ASN1Sequence.cpp',
                        'src/ASN1/ASN1Setof.cpp',
                        'src/ASN1/ASN1UTCTime.cpp',
                        'src/ASN1/AlgorithmIdentifier.cpp',
                        'src/ASN1/Certificate.cpp',
                        'src/ASN1/CertificateInfo.cpp',
                        'src/ASN1/ContentInfo.cpp',
                        'src/ASN1/ContentType.cpp',
                        'src/ASN1/Crl.cpp',
                        'src/ASN1/DigestInfo.cpp',
                        'src/ASN1/IssuerAndSerialNumber.cpp',
                        'src/ASN1/Name.cpp',
                        'src/ASN1/OCSPRequest.cpp',
                        'src/ASN1/PKIStatusInfo.cpp',
                        'src/ASN1/RSAPrivateKey.cpp',
                        'src/ASN1/RSAPublicKey.cpp',
                        'src/ASN1/RelativeDistinguishedName.cpp',
                        'src/ASN1/SignedData.cpp',
                        'src/ASN1/SignerInfo.cpp',
                        'src/ASN1/SubjectPublicKeyInfo.cpp',
                        'src/ASN1/TSTInfo.cpp',
                        'src/ASN1/TimeStampData.cpp',
                        'src/ASN1/TimeStampRequest.cpp',
                        'src/ASN1/TimeStampResponse.cpp',
                        'src/ASN1/TimeStampToken.cpp',
                        'src/ASN1/UUCBufferedReader.cpp',
                        'src/ASN1/UUCByteArray.cpp',
                        # 'src/RSA/desc.c',
                        # 'src/RSA/nn.c',
                        # 'src/RSA/r_encode.c',
                        # 'src/RSA/r_stdlib.c',
                        # 'src/RSA/rc2.c',
                        # 'src/RSA/rc2.h',
                        # 'src/RSA/rsa.c',
                        # 'src/RSA/sha1.c',
                        # 'src/RSA/sha2.c',
                        'src/CSP/IAS.cpp',
                        'src/CSP/ExtAuthKey.cpp',
                        'src/PCSC/APDU.cpp',
                        'src/PCSC/CardLocker.cpp',
                        'src/PCSC/PCSC.cpp',
                        'src/PCSC/Token.cpp',
                        'src/Util/Array.cpp',
                        'src/Util/CacheLib.cpp',
                        'src/Util/CryptoppUtils.cpp',
                        'src/Util/funccallinfo.cpp',
                        'src/Util/IniSettings.cpp',
                        'src/Util/log.cpp',
                        'src/Util/ModuleInfo.cpp',
                        'src/Util/TLV.cpp',
                        'src/Util/util.cpp',
                        'src/Util/UtilException.cpp',
                        'src/Util/UUCProperties.cpp',
                        'src/Util/UUCStringTable.cpp',
                        'src/Util/UUCTextFileReader.cpp',
                        'src/Util/SyncroMutex.cpp',
                        'src/Crypto/AES.cpp',
                        'src/Crypto/ASNParser.cpp',
                        'src/Crypto/Base64.cpp',
                        'src/Crypto/DES3.cpp',
                        'src/Crypto/MAC.cpp',
                        'src/Crypto/MD5.cpp',
                        'src/Crypto/RSA.cpp',
                        'src/Crypto/SHA1.cpp',
                        'src/Crypto/SHA256.cpp',
                        'src/Crypto/SHA512.cpp']

libcie_sign_sdk = static_library(
  'cie-sign-sdk',
  cie_sign_sdk_sources,
  include_directories : inc,
  dependencies : [ crypto_dep, cryptop_dep, cryptopp_dep, pcsclite_dep, thread_dep ],
  install : true
)
