project('libcie-pkcs11',
  'cpp',
  'c',
  version : '1.4.3.3',
  license : 'MIT')

add_project_arguments('-fPIC', language : 'cpp')

cpp = meson.get_compiler('cpp')
libdir = meson.current_source_dir() + '/lib'
podofo_dep = cpp.find_library('libpodofo', dirs : libdir)

crypto_dep = dependency('libcrypto')
cryptop_dep = dependency('libcrypto++', required : false)
cryptopp_dep = dependency('libcryptopp', required : false)
cryptoppp_dep = dependency('cryptopp', required : false)
pcsclite_dep = dependency('libpcsclite')
thread_dep = dependency('threads')

curl_dep = dependency('libcurl')
fontconfig_dep = dependency('fontconfig')
freetype_dep = dependency('freetype2')
png_dep = dependency('libpng')
libxml2_dep = dependency('libxml-2.0', required : false)
xml2_dep = dependency('xml2', required : false)

inc_so = include_directories('pkcs11/src/.',
                          'pkcs11/src/Crypto',
                          'pkcs11/src/CSP',
                          'pkcs11/src/LOGGER',
                          'pkcs11/src/PCSC',
                          'pkcs11/src/PKCS11',
                          'pkcs11/src/Sign',
                          'pkcs11/src/UI',
                          'pkcs11/src/Util')

inc_a = include_directories('sign-sdk/include',
                          'sign-sdk/include/podofo',
                          'sign-sdk/include/podofo/include',
                          'sign-sdk/include/podofo/include/podofo',
                          'sign-sdk/src',
                          'sign-sdk/src/RSA',
                          'sign-sdk/src/ASN1',
                          'sign-sdk/src/Crypto',
                          'sign-sdk/src/CSP',
                          'sign-sdk/src/PCSC',
                          'sign-sdk/src/Util')

cie_pkcs11_sources = ['pkcs11/src/Util/UUCByteArray.cpp',
                      'pkcs11/src/Util/UtilException.cpp',
                      'pkcs11/src/Util/SyncroEvent.cpp',
                      'pkcs11/src/Util/Array.cpp',
                      'pkcs11/src/Util/TLV.cpp',
                      'pkcs11/src/Util/UUCProperties.cpp',
                      'pkcs11/src/Util/CacheLib.cpp',
                      'pkcs11/src/Util/UUCStringTable.cpp',
                      'pkcs11/src/Util/funccallinfo.cpp',
                      'pkcs11/src/Util/ModuleInfo.cpp',
                      'pkcs11/src/Util/UUCTextFileReader.cpp',
                      'pkcs11/src/Util/SyncroMutex.cpp',
                      'pkcs11/src/Util/log.cpp',
                      'pkcs11/src/Util/CryptoppUtils.cpp',
                      'pkcs11/src/Util/util.cpp',
                      'pkcs11/src/Util/IniSettings.cpp',
                      'pkcs11/src/CSP/ExtAuthKey.cpp',
                      'pkcs11/src/CSP/PINManager.cpp',
                      'pkcs11/src/CSP/AbilitaCIE.cpp',
                      'pkcs11/src/CSP/FirmaConCIE.cpp',
                      'pkcs11/src/CSP/VerificaConCIE.cpp',
                      'pkcs11/src/CSP/IAS.cpp',
					            'pkcs11/src/LOGGER/Logger.cpp',
                      'pkcs11/src/PCSC/Token.cpp',
                      'pkcs11/src/PCSC/PCSC.cpp',
                      'pkcs11/src/PCSC/APDU.cpp',
                      'pkcs11/src/PCSC/CardLocker.cpp',
                      'pkcs11/src/PKCS11/session.cpp',
                      'pkcs11/src/PKCS11/P11Object.cpp',
                      'pkcs11/src/PKCS11/CardTemplate.cpp',
                      'pkcs11/src/PKCS11/CIEP11Template.cpp',
                      'pkcs11/src/PKCS11/CardContext.cpp',
                      'pkcs11/src/PKCS11/Mechanism.cpp',
                      'pkcs11/src/PKCS11/PKCS11Functions.cpp',
                      'pkcs11/src/PKCS11/initP11.cpp',
                      'pkcs11/src/PKCS11/Slot.cpp',
                      'pkcs11/src/Crypto/SHA512.cpp',
                      'pkcs11/src/Crypto/DES3.cpp',
                      'pkcs11/src/Crypto/SHA1.cpp',
                      'pkcs11/src/Crypto/ASNParser.cpp',
                      'pkcs11/src/Crypto/Base64.cpp',
                      'pkcs11/src/Crypto/SHA256.cpp',
                      'pkcs11/src/Crypto/MAC.cpp',
                      'pkcs11/src/Crypto/MD5.cpp',
                      'pkcs11/src/Crypto/RSA.cpp',
                      'pkcs11/src/Crypto/AES.cpp',
                      'pkcs11/src/Sign/CIESign.cpp',
                      'pkcs11/src/Sign/CIEVerify.cpp']

cie_sign_sdk_sources = ['sign-sdk/src/Base64.cpp',
                        'sign-sdk/src/BigInteger.cpp',
                        'sign-sdk/src/BigIntegerAlgorithms.cpp',
                        'sign-sdk/src/BigIntegerUtils.cpp',
                        'sign-sdk/src/BigUnsigned.cpp',
                        'sign-sdk/src/BigUnsignedInABase.cpp',
                        'sign-sdk/src/CIESigner.cpp',
                        'sign-sdk/src/CIEEngine.c',
                        'sign-sdk/src/CIEEngineHelper.c',
                        'sign-sdk/src/CertStore.cpp',
                        'sign-sdk/src/CounterSignatureGenerator.cpp',
                        'sign-sdk/src/SignatureGenerator.cpp',
                        'sign-sdk/src/LdapCrl.cpp',
                        'sign-sdk/src/M7MParser.cpp',
                        'sign-sdk/src/PdfSignatureGenerator.cpp',
                        'sign-sdk/src/PdfVerifier.cpp',
                        'sign-sdk/src/SignedDataGeneratorEx.cpp',
                        'sign-sdk/src/SignedDocument.cpp',
                        'sign-sdk/src/SignerInfoGenerator.cpp',
                        'sign-sdk/src/TSAClient.cpp',
                        'sign-sdk/src/UUCLogger.cpp',
                        'sign-sdk/src/UUCProperties.cpp',
                        'sign-sdk/src/UUCStringTable.cpp',
                        'sign-sdk/src/UUCTextFileReader.cpp',
                        'sign-sdk/src/UUCTextFileWriter.cpp',
                        'sign-sdk/src/XAdESGenerator.cpp',
                        'sign-sdk/src/XAdESVerifier.cpp',
                        'sign-sdk/src/definitions.cpp',
                        'sign-sdk/src/disigonsdk.cpp',
                        'sign-sdk/src/ASN1/ASN1BitString.cpp',
                        'sign-sdk/src/ASN1/ASN1Boolean.cpp',
                        'sign-sdk/src/ASN1/ASN1GenericSequence.cpp',
                        'sign-sdk/src/ASN1/ASN1Integer.cpp',
                        'sign-sdk/src/ASN1/ASN1Null.cpp',
                        'sign-sdk/src/ASN1/ASN1Object.cpp',
                        'sign-sdk/src/ASN1/ASN1ObjectIdentifier.cpp',
                        'sign-sdk/src/ASN1/ASN1Octetstring.cpp',
                        'sign-sdk/src/ASN1/ASN1OptionalField.cpp',
                        'sign-sdk/src/ASN1/ASN1Sequence.cpp',
                        'sign-sdk/src/ASN1/ASN1Setof.cpp',
                        'sign-sdk/src/ASN1/ASN1UTCTime.cpp',
                        'sign-sdk/src/ASN1/AlgorithmIdentifier.cpp',
                        'sign-sdk/src/ASN1/Certificate.cpp',
                        'sign-sdk/src/ASN1/CertificateInfo.cpp',
                        'sign-sdk/src/ASN1/ContentInfo.cpp',
                        'sign-sdk/src/ASN1/ContentType.cpp',
                        'sign-sdk/src/ASN1/Crl.cpp',
                        'sign-sdk/src/ASN1/DigestInfo.cpp',
                        'sign-sdk/src/ASN1/IssuerAndSerialNumber.cpp',
                        'sign-sdk/src/ASN1/Name.cpp',
                        'sign-sdk/src/ASN1/OCSPRequest.cpp',
                        'sign-sdk/src/ASN1/PKIStatusInfo.cpp',
                        'sign-sdk/src/ASN1/RSAPrivateKey.cpp',
                        'sign-sdk/src/ASN1/RSAPublicKey.cpp',
                        'sign-sdk/src/ASN1/RelativeDistinguishedName.cpp',
                        'sign-sdk/src/ASN1/SignedData.cpp',
                        'sign-sdk/src/ASN1/SignerInfo.cpp',
                        'sign-sdk/src/ASN1/SubjectPublicKeyInfo.cpp',
                        'sign-sdk/src/ASN1/TSTInfo.cpp',
                        'sign-sdk/src/ASN1/TimeStampData.cpp',
                        'sign-sdk/src/ASN1/TimeStampRequest.cpp',
                        'sign-sdk/src/ASN1/TimeStampResponse.cpp',
                        'sign-sdk/src/ASN1/TimeStampToken.cpp',
                        'sign-sdk/src/ASN1/UUCBufferedReader.cpp',
                        'sign-sdk/src/ASN1/UUCByteArray.cpp',
                        'sign-sdk/src/RSA/desc.c',
                        'sign-sdk/src/RSA/nn.c',
                        'sign-sdk/src/RSA/r_encode.c',
                        'sign-sdk/src/RSA/r_stdlib.c',
                        'sign-sdk/src/RSA/rc2.c',
                        'sign-sdk/src/RSA/rc2.h',
                        'sign-sdk/src/RSA/rsa.c',
                        'sign-sdk/src/RSA/sha1.c',
                        'sign-sdk/src/RSA/sha2.c',
                        'sign-sdk/src/CSP/IAS.cpp',
                        'sign-sdk/src/CSP/ExtAuthKey.cpp',
                        'sign-sdk/src/PCSC/APDU.cpp',
                        'sign-sdk/src/PCSC/CardLocker.cpp',
                        'sign-sdk/src/PCSC/PCSC.cpp',
                        'sign-sdk/src/PCSC/Token.cpp',
                        'sign-sdk/src/Util/Array.cpp',
                        'sign-sdk/src/Util/CacheLib.cpp',
                        'sign-sdk/src/Util/CryptoppUtils.cpp',
                        'sign-sdk/src/Util/funccallinfo.cpp',
                        'sign-sdk/src/Util/IniSettings.cpp',
                        'sign-sdk/src/Util/log.cpp',
                        'sign-sdk/src/Util/ModuleInfo.cpp',
                        'sign-sdk/src/Util/TLV.cpp',
                        'sign-sdk/src/Util/util.cpp',
                        'sign-sdk/src/Util/UtilException.cpp',
                        'sign-sdk/src/Util/UUCProperties.cpp',
                        'sign-sdk/src/Util/UUCStringTable.cpp',
                        'sign-sdk/src/Util/UUCTextFileReader.cpp',
                        'sign-sdk/src/Util/SyncroMutex.cpp',
                        'sign-sdk/src/Crypto/AES.cpp',
                        'sign-sdk/src/Crypto/ASNParser.cpp',
                        'sign-sdk/src/Crypto/Base64.cpp',
                        'sign-sdk/src/Crypto/DES3.cpp',
                        'sign-sdk/src/Crypto/MAC.cpp',
                        'sign-sdk/src/Crypto/MD5.cpp',
                        'sign-sdk/src/Crypto/RSA.cpp',
                        'sign-sdk/src/Crypto/SHA1.cpp',
                        'sign-sdk/src/Crypto/SHA256.cpp',
                        'sign-sdk/src/Crypto/SHA512.cpp']

libcie_sign_sdk = static_library(
  'cie-sign-sdk',
  cie_sign_sdk_sources,
  include_directories : inc_a,
  dependencies : [ crypto_dep, cryptop_dep, cryptopp_dep, cryptoppp_dep, libxml2_dep, pcsclite_dep, thread_dep, curl_dep, fontconfig_dep, freetype_dep, png_dep, podofo_dep, xml2_dep ],
  install : true
)

libcie_pkcs11 = library(
  'cie-pkcs11',
  cie_pkcs11_sources,
  include_directories : inc_so,
  dependencies : [ crypto_dep, cryptop_dep, cryptopp_dep, cryptoppp_dep, libxml2_dep, pcsclite_dep, png_dep, thread_dep, curl_dep, fontconfig_dep, freetype_dep, xml2_dep ],
  link_with: libcie_sign_sdk,
  install : true,
)

pkg_mod = import('pkgconfig')
pkg_mod.generate(
  libraries : libcie_pkcs11,
  version : '1.4.3.3',
  name : 'libcie-pkcs11',
  filebase : 'cie-pkcs11',
  description : 'A library to enable CIE authentication.'
)
